--- a/.github/workflows/quarkus.yml
+++ b/.github/workflows/quarkus.yml
@@ -22,7 +22,7 @@ jobs:
         run: chmod +x mvnw
 
       - name: Build do projeto com Maven (perfil dev)
-        run: ./mvnw clean install -Dquarkus.profile=dev
+        run: ./mvnw clean install "-Dquarkus.profile=dev"
 
       - name: Executar testes
-        run: ./mvnw test -Dquarkus.profile=test
+        run: ./mvnw test "-Dquarkus.profile=test"
